# JRFirstGame

./: .gitignore  CMakeLists.txt  Info.plist  README.md  document.md  embed_font.py  start_training.bat  start_training.sh  test_chinese.cpp  vcpkg.json
.github/workflows/: build.yml
docs/html/: AIController_8cpp.html  AIController_8cpp__incl.map  AIController_8cpp__incl.md5  AIController_8hpp.html  AIController_8hpp__dep__incl.map  AIController_8hpp__dep__incl.md5  AIController_8hpp__incl.map  AIController_8hpp__incl.md5  AIController_8hpp_source.html  AIInference_8cpp.html  AIInference_8cpp__incl.map  AIInference_8cpp__incl.md5  AIInference_8hpp.html  AIInference_8hpp__dep__incl.map  AIInference_8hpp__dep__incl.md5  AIInference_8hpp__incl.map  AIInference_8hpp__incl.md5  AIInference_8hpp_source.html  AudioManager_8cpp.html  AudioManager_8cpp__incl.map  AudioManager_8cpp__incl.md5  AudioManager_8hpp.html  AudioManager_8hpp__dep__incl.map  AudioManager_8hpp__dep__incl.md5  AudioManager_8hpp__incl.map  AudioManager_8hpp__incl.md5  AudioManager_8hpp_source.html  AuthView_8cpp.html  AuthView_8cpp__incl.map  AuthView_8cpp__incl.md5  AuthView_8hpp.html  AuthView_8hpp__dep__incl.map  AuthView_8hpp__dep__incl.md5  AuthView_8hpp__incl.map  AuthView_8hpp__incl.md5  AuthView_8hpp_source.html  CharacterView_8cpp.html  CharacterView_8cpp__incl.map  CharacterView_8cpp__incl.md5  CharacterView_8hpp.html  (+440 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_f.js  enums_0.js  enums_1.js  enums_2.js  (+75 more)
docs/latex/: AIController_8cpp.tex  AIController_8cpp__incl.md5  AIController_8hpp.tex  AIController_8hpp__dep__incl.md5  AIController_8hpp__incl.md5  AIController_8hpp_source.tex  AIInference_8cpp.tex  AIInference_8cpp__incl.md5  AIInference_8hpp.tex  AIInference_8hpp__dep__incl.md5  AIInference_8hpp__incl.md5  AIInference_8hpp_source.tex  AudioManager_8cpp.tex  AudioManager_8cpp__incl.md5  AudioManager_8hpp.tex  AudioManager_8hpp__dep__incl.md5  AudioManager_8hpp__incl.md5  AudioManager_8hpp_source.tex  AuthView_8cpp.tex  AuthView_8cpp__incl.md5  AuthView_8hpp.tex  AuthView_8hpp__dep__incl.md5  AuthView_8hpp__incl.md5  AuthView_8hpp_source.tex  CharacterView_8cpp.tex  CharacterView_8cpp__incl.md5  CharacterView_8hpp.tex  CharacterView_8hpp__dep__incl.md5  CharacterView_8hpp__incl.md5  CharacterView_8hpp_source.tex  Database_8cpp.tex  Database_8cpp__incl.md5  Database_8hpp.tex  Database_8hpp__dep__incl.md5  Database_8hpp__incl.md5  Database_8hpp_source.tex  GameLogic_8cpp.tex  GameLogic_8cpp__incl.md5  GameLogic_8hpp.tex  GameLogic_8hpp__dep__incl.md5  (+160 more)
rl/: check_v19.py  export_onnx.py  export_onnx_standalone.py  game_env.py  play.py  requirements.txt  run_v19.py  run_v20.py  run_v21.py  run_v22.py  run_v23.py  run_v24.py  run_v25.py  test_env.py  train.py  webui.py
rl/models/: ppo_policy.onnx
src/: AIController.cpp  AIController.hpp  AIInference.cpp  AIInference.hpp  AudioManager.cpp  AudioManager.hpp  AuthView.cpp  AuthView.hpp  CharacterView.cpp  CharacterView.hpp  Database.cpp  Database.hpp  GameLogic.cpp  GameLogic.hpp  GameView.cpp  GameView.hpp  I18n.cpp  I18n.hpp  MapSystem.cpp  MapSystem.hpp  MenuView.cpp  MenuView.hpp  Network.cpp  Network.hpp  OnlineView.cpp  OnlineView.hpp  RankingsView.cpp  RankingsView.hpp  UI.cpp  UI.hpp  UIWidgets.cpp  UIWidgets.hpp  Utils.cpp  Utils.hpp  ViewBase.cpp  ViewBase.hpp  WeaponList.c  WeaponList.cpp  WeaponList.h  WeaponList.hpp  (+3 more)
tools/: embed_resource.py  generate_audio.py
